created lamp and light added header text with Checkout button and 04 05 span line

--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
             <li><a href="">Contemporary</a></li>
             <li><a href="">Affordable</a></li>
         </ul>
-        <button type="button">click here</button>
+        <button type="button"><span></span></button>
     </nav>
+
+    <div class="lamp-container">
+        <img src="/vueLamp_img/images/lamp.png" class="lamp">
+        <img src="/vueLamp_img/images/light.png" class="light">
+    </div>
+
+    <div class="div text-container">
+        <h1>Latest<br> in Lighting</h1>
+        <p>This is the first lamp from our company. We're making a huge collection of modern lamps in all categories from home use to office use.</p>
+        <a href="">Checkout out our Collection</a>
+        <div class="control">
+            <p>04</p>
+            <div class="line"><span></span></div>
+            <p>05</p>
+        </div>
+    </div>
 </div>
 
 
